Adding unit tests

--- a/test/index.html
+++ b/test/index.html
@@ -370,6 +370,12 @@
 		<input id="radiocheckbox-1-2" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required">
 		<input id="radiocheckbox-1-3" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required">
 	</form>
+	<form id="disabledFields">
+		<input type="text" data-rule-required="true" disabled="disabled" />
+		<fieldset disabled="disabled">
+			<input type="text" data-rule-required="true" />
+		</fieldset>
+	</form>
 </div>
 </body>
 </html>
