--- a/test/index.html
+++ b/test/index.html
@@ -92,12 +92,6 @@
 			<option value="2">Milk</option>
 		</select>
 	</form>
-	<form id="testForm4">
-		<input type="text" data-rule-required="true" disabled="disabled" />
-		<fieldset disabled="disabled">
-			<input type="text" data-rule-required="true" />
-		</fieldset>
-	</form>
 	<div class="error" id="errorContainer">
 		<ul>
 			<li class="error" id="errorWrapper">
@@ -375,6 +369,12 @@
 		<input id="radiocheckbox-1-1" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required">
 		<input id="radiocheckbox-1-2" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required">
 		<input id="radiocheckbox-1-3" autocomplete="off" type="checkbox" name="radiocheckbox-1" required="required">
+	</form>
+	<form id="disabledFieldSet">
+		<input type="text" data-rule-required="true" disabled="disabled" />
+		<fieldset disabled="disabled">
+			<input type="text" data-rule-required="true" />
+		</fieldset>
 	</form>
 </div>
 </body>
